<resources>
    <string name="app_name">Wheelie</string>
    <string name="pick_image">Pick Image</string>
    <string name="launch_enter_animated_activity">Launch enter animated activity</string>
    <string name="enter_animated_activity">Enter animated activity</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="launch_wireless_settings">Launch Wireless Settings</string>
    <string name="wireless_settings_result_msg">Wireless settings result</string>
    <string name="print_image">Print Image</string>
    <string name="set_image_as_wallpaper">Set image as wallpaper</string>
    <string name="open_image">Open Image</string>
    <string name="share_image">Share image</string>
    <string name="request_camera_permission">Request camera permission</string>
    <string name="launch_app_details_settings">Launch app details settings</string>
    <string name="req_multiple_permissions">Request multiple permissions</string>
    <string name="request_manage_overlay_permission">Request manage overlay permission</string>
    <string name="pick_image_get_content">Pick image get content</string>
    <string name="pick_video_get_content">Pick video get content</string>
    <string name="check_flexible_update">Check flexible update</string>
    <string name="check_immediate_update">Check immediate update</string>
    <string name="check_flexible_update_install_fails">Check flexible update install fails</string>
    <string name="check_flexible_update_download_fails">Check flexible update download fails</string>
    <string name="user_rejects_flexible_update">User rejects flexible update</string>
    <string name="settings">Settings</string>
    <string name="recycler_view_demo">Recycler view demo</string>
</resources>