<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/launch_enter_animated_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_enter_animated_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_internet_connection_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_internet_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launch_enter_animated_screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/launch_wireless_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_wireless_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_internet_connection_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/print_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launch_wireless_settings_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_image_as_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_image_as_wallpaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/print_image" />

</androidx.constraintlayout.widget.ConstraintLayout>